Fix rendering of grid gap in editor and adjust frontend

--- a/projects/plugins/jetpack/extensions/blocks/instagram-gallery/view.scss
+++ b/projects/plugins/jetpack/extensions/blocks/instagram-gallery/view.scss
@@ -42,17 +42,6 @@
 			&.is-stacked-on-mobile {
 				display: block;
 			}
-			&:not( .is-stacked-on-mobile ) {
-				.wp-block-jetpack-instagram-gallery__grid-post {
-					padding: 0 !important; // Overrides the block style
-				}
-			}
-		}
-
-		@media ( min-width: $break-small ) {
-			.wp-block-jetpack-instagram-gallery__grid-post {
-				padding: 0 !important; // Overrides the block style
-			}
 		}
 
 		.wp-block-jetpack-instagram-gallery__grid-post {
